# ReqREATE

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  README.md  pyproject.toml  requirements.txt
gaphor_files/: ArchBridgeRequirements.gaphor  BridgeExample.gaphor  CPS.gaphor  CPS2.gaphor  CPS3.gaphor  Sample1.gaphor  Sample1_english.gaphor
gh/: ArchSegment.gh  ArchSegment_Connector.gh  Curb.gh  Girder.gh  Sidewalk.gh  Spandrel.gh  twisty.gh
graphml_rules/: rule.graphml  rule.json
json_rules/: README.md  ReqD1-1.json  ReqD2-1-1.json  ReqD2-1.json  SubstructureDecomp.json  SubstructureDecomp2.json  SubstructureDecomp3.json  SubstructureDecompD1.json  SubstructureDecompD2.json  SuperstructureDecomp.json  expansion_module_d3_from_if1.json  expansion_module_d3_from_if2.json  foundation_module_d2.json  girder_module_d3.json  girder_module_decomp_d3.json  kappe_module_d3_iface5.json  kappe_module_d3_iface6.json
notebooks/: demo_reqre.ipynb
reqre/: __init__.py  rules.py
scripts/: demo.config.json  demo.py  demo_arch_bridge_rule.py  demo_gaphor_requirements.py  demo_gaphor_requirements_ruleset.py  demo_gh_assembly.py  demo_gh_girder.py  demo_gh_stl.py  demo_graphml.py  demo_manim_rule_host.py  demo_neo4j.py  demo_requirements_ruleset_and_assembly.py  demo_reworked.py  demo_rule.py  plot_similarity_report.py  push_rule1.py  push_rule2.py  validate_and_document_rule.py  validate_rules.py
tests/: test_cypher.py  test_gh_assembly.py  test_gh_param_resolver.py  test_graphml.py  test_rules.py  test_schema.py
webapp/: README.md  __init__.py  server.py
(+112 files in other folders)
