[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reqre"
version = "0.0.0"
description = "Requirements rewriting engine."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "compute-rhino3d",
    "gaphor",
    "jsonschema",
    "manim",
    "neo4j",
    "networkx",
    "rhino3dm",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools.package-data]
reqre = ["schemas/*.schema.json"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
